# checkoutmanager

./: .coveragerc  .editorconfig  .gitignore  .hgignore  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  CHANGES.txt  CREDITS.rst  CREDITS.txt  MANIFEST.in  Makefile  README.rst  README.txt  TODO.rst  TODO.txt  buildout.cfg  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: test.yaml
checkoutmanager/: USAGE.txt  config.py  custom_actions.py  custom_actions.txt  dirinfo.py  executors.py  reports.py  runner.py  sample.cfg  utils.py
checkoutmanager/tests/: config.txt  conftest.py  custom_actions.py  custom_actions.txt  dirinfo.txt  dirinfo_bzr.rst  dirinfo_git.rst  dirinfo_hg.rst  dirinfo_svn.rst  sample.cfg  test_setup.py  utils.txt  vcstestconfig.cfg.templ
src/checkoutmanager/: dirinfo.py  executors.py  runner.py  sample.cfg  utils.py
src/checkoutmanager/tests/: config.txt  custom_actions.py  dirinfo.txt  sample.txt  testconfig.cfg
